--- a/src/pages/home-components/HomeSection2.css
+++ b/src/pages/home-components/HomeSection2.css
@@ -1,15 +1,14 @@
 .homeSection2 {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 .homeSection2Left {
-
   /* width: 950px; */
 }
 
 .homeSection2Title {
   padding: 0px 0px 0px 400px;
-  width: 1000px;
+  /* width: 1000px; */
   font-size: 42px;
   margin-top: 100px;
   text-align: justify;
@@ -37,6 +36,7 @@
   /* justify-content: flex-end; */
   padding: 20px 0px 0px 400px;
   /* width: 400px; */
+  cursor: pointer;
 }
 
 .homeSection2Right {
@@ -48,4 +48,11 @@
   /* margin-top: 100px; */
   /* text-align: justify; */
   /* width: 50%; */
+}
+.roundButton {
+  outline-style: initial;
+  border-radius: 100px;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
 }
