--- a/src/pages/home-components/Hero.css
+++ b/src/pages/home-components/Hero.css
@@ -25,10 +25,14 @@
   padding-right: 190px;
   text-align: justify;
 }
+.home-hero-sm-text {
+  font-size: 8px;
+  margin-left: 30px;
+  margin-top: 5px;
+}
 .home-hero-actions {
   text-align: center;
-  padding-left: 300px;
-
+  margin-left: 300px;
 }
 .home-sign-up {
   width: 175px;
