--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -54,7 +54,8 @@
 .home-slides {
   background: #ebeaea;
   text-align: justify;
-  padding-left: 180px;
+  padding-left: 25%;
+  padding-right: 25%;
   margin-top: 15px;
   height: 630px;
   padding-top: 70px;
