--- a/src/pages/HeaderJg/HeaderJg.module.css
+++ b/src/pages/HeaderJg/HeaderJg.module.css
@@ -11,24 +11,26 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
-  padding: 0 120px;
+padding: 0 40px 0 220px;
 }
 
 .leftNav {
-  margin: 0 0 0 135px;
-  background: none;
-  width: 33%;
+/* background-color: #707070; */
+  /* background: none; */
+  /* width: 33%; */
+  
+
 }
 
 .centerNav {
-
+/* background-color: yellow; */
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+
   justify-content: space-around;
-  width: 30%;
-  margin: 90px 40px 0 0;
-  padding-bottom: 10px;
+  width: 33%;
+  margin: 0px 0 0 280px;
+padding-top: 35px;
   font-size: 16px;
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -37,7 +39,7 @@
 }
 
 .rightNav {
-  width: 33%;
+ width: 30%;
   display: flex;
   flex-direction: column;
   background-color: pink;
@@ -104,8 +106,8 @@
   background-color: #fdf7d3;
   width: 140px;
   height: 140px;
-  top: 70px;
-  right: 250px;
+  top: 110px;
+  right: 165px;
   border-radius: 2px;
   box-shadow: 0px 4px 5px #00000029;
   padding: 0;
