--- a/src/pages/StudentProjectLibrary1/LeftsideStudProjJg.module.css
+++ b/src/pages/StudentProjectLibrary1/LeftsideStudProjJg.module.css
@@ -8,13 +8,12 @@
 
 .leftside{
 color: #767676;
-margin: 0px 0 0 205px;
+margin: 10px 0 0 205px;
 font-family: 'Open Sans', sans-serif;
-
+background-color: pink;
 }
 
 hr{
-
 margin-top: -30px;
     width: 169px;
 
@@ -26,13 +25,14 @@ margin: 14px 14px 0 0;
     
 }
 .checkBot{
-
+background-color: pink;
     margin: 3px 14px 0 0;
 }
 .category{
 font-family: 'Open Sans', sans-serif;
     margin-top: 50px;
     font-style: 16px;
+margin-right:20px ; 
 }
 span{
     font-size: 14px;
