--- a/src/pages/StudentProjectLibrary1/ProjectsTitleJG.module.css
+++ b/src/pages/StudentProjectLibrary1/ProjectsTitleJG.module.css
@@ -6,20 +6,21 @@
   @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&display=swap');
 .title{
 background-color: lightgreen;
-   
+   text-align: center;
     height: 57px;
     font-size: 42px;
     font-family: 'Open Sans', sans-serif;
     color: #6c6c6c;
     margin: 88px 0 10px 0;
-    padding-right: 610px;
+padding-right: 36%;
    font-weight: bold;
    letter-spacing: 1px;
 }
 .welcome{
+    text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
-    padding-left: 29% ;
+ margin: 30px 0 50px 200px ;
     color: #6c6c6c;
 font-weight: bolder;
 letter-spacing: 1px;
