--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,26 @@
+
+
 .footer {
+    font-family: "Open Sans", sans-serif;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    padding-top: 150px;
+    padding-left: 240px;
+    padding-bottom: 190px;
+    padding-right: 180px;
+    background-color: #B2E4FA;
+    text-align: justify;
 }
 
-.footerSec5 {
+.footerSec {
     width: 100%;
     
+}
+.footer-title {
+    font-size: 20px;
+    padding-bottom: 40px;
+}
+.footer-last-sec {
+    padding-left: 20px;
 }
