--- a/src/pages/StudentProfileViewer.module.css
+++ b/src/pages/StudentProfileViewer.module.css
@@ -57,26 +57,31 @@ h1{
 display: flex;
 flex-direction: row;
 justify-content: center;
+  
 
 }
 .leftTitle{
   color:#A5A5A5 ;
   font-family: 'Nunito', sans-serif;
 font-size: 30px;
-margin-right: 110px;
-margin-left: 40px;
+margin: 0 110px 0 40px;
+
+
 font-weight: bolder;
+  
+}
+.pTag{
+  margin-bottom: 38px;
 }
 .rightTitle{
   color:#707070 ;
   font-family: "Open Sans", sans-serif;
 font-size: 30px;
 font-weight:900;
-margin-left: 110px;
+margin: 0 0 38px 100px;
+
 }
-p{
-  margin-bottom:38px ;
-}
+
 .mainBody{
   display: flex;
   flex-direction: column;
