--- a/src/components/DashboardNavBar.module.css
+++ b/src/components/DashboardNavBar.module.css
@@ -23,9 +23,51 @@
     margin-right: auto;
     margin-bottom: 2px;
     display: flex;
-    align-self: flex-end;
+    align-items: center;
+    /* align-self: flex-end; */
 
     /* border: 2px solid red; */
+}
+
+.dashboard_progressTracker_container_hidden{
+    opacity: 0.3;
+}
+
+.dot{
+    height: 15px;
+    width: 15px;
+    background-color: var(--white);
+    border: 2.5px solid var(--darker-blue);
+    border-radius: 50%;
+    margin-right: 8px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    /* border: 2px solid red; */
+}
+
+.dotSelected{
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    margin-right:8px;
+    background-color: #FDF7C0;
+    border: 2.5px solid var(--darker-blue);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    /* border: 2px solid red; */
+}
+
+.dot p{
+    display: none;
+}
+
+.dot_text{
+    font-family: Nunito, sans-serif;
+    font-weight: 900;
+    font-size: 18px ;
+    color: var(--headings-font-color);
+    text-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .dashboard_progressTracker{
@@ -37,15 +79,17 @@
     display: flex;
     align-items: center;
     align-self: flex-end;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
     gap: 27px;
 
     /* border: 2px solid red; */
 }
 
-.dashboard_btns{
-    height: 35px;
-    width: 150px;
+.navBarBtns{
+    font-size: 15px;
+    height: 2em;
+    width: 14em;
+    min-width: fit-content;
     background-color: orange;
     color: var(--white);
     border-radius: 5px;
@@ -53,16 +97,30 @@
     align-items: center;
     justify-content: center;
     font-weight: bolder;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3),
+    2px 2px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
 
+.navBarBtns:hover{
+    opacity: 0.6;
+}
 
-.pink{
+.navBarBtns:active{
+    opacity: 1;
+}
+
+.helpBtn{
     background-color: rgb(240, 0, 168) ;
 }
 
-.blue{
+.projectsBtn{
     background-color: rgb(13, 140, 238);
+}
+
+.navBar_links{
+    text-decoration: none;
+    color: var(--white);
 }
 
 .dashboard_navbar_flags_container{
