--- a/src/components/DashboardNavBar.module.css
+++ b/src/components/DashboardNavBar.module.css
@@ -10,6 +10,7 @@
     /* border: 2px solid red; */
 }
 
+/* ---------------------LOGO-------------------------- */
 .dashboard_navbar_logo{
     height: 60px;
     padding: 3px 0;
@@ -18,12 +19,15 @@
     /* border: 2px solid red; */
 }
 
+/* ---------------------PROGRESS TRACKER-------------------------- */
 .dashboard_progressTracker_container{
     margin-left: 20px;
     margin-right: auto;
     margin-bottom: 2px;
     display: flex;
     align-items: center;
+    /* height: 40px; */
+    /* align-self: flex-end; */
     /* align-self: flex-end; */
 
     /* border: 2px solid red; */
@@ -31,6 +35,36 @@
 
 .dashboard_progressTracker_container_hidden{
     opacity: 0.3;
+}
+
+
+.tracker_text_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 15px;
+    background-color: pink
+    /* border: 2px solid red; */
+}
+
+.tracker_text_title{
+    font-family: Nunito, sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+    color: var(--headings-font-color);
+    margin: 0;
+    padding:-10px 0;
+
+    /* border: 2px solid blue; */
+}
+
+.tracker_text_sub{
+    font-family: 'Open sans', sans-serif;
+    color: var(--headings-font-color);
+    font-size: 11px;
+    margin: 0;
+    padding: 0;
+    /* border: 2px solid magenta; */
 }
 
 .dot{
@@ -70,17 +104,20 @@
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-.dashboard_progressTracker{
+/* .dashboard_progressTracker{
     height: 40px;
     align-self: flex-end;
-}
+} */
 
+
+/* ---------------------NAV BUTTONS-------------------------- */
 .dashboard_nav_btns_container{
     display: flex;
     align-items: center;
     align-self: flex-end;
     margin-bottom: 6px;
     gap: 27px;
+    
 
     /* border: 2px solid red; */
 }
@@ -123,6 +160,8 @@
     color: var(--white);
 }
 
+
+/* ---------------------FLAGS-------------------------- */
 .dashboard_navbar_flags_container{
     display: flex;
     gap: 8px;
