--- a/src/pages/studentDashboard-components/StudentDashboard-hero.module.css
+++ b/src/pages/studentDashboard-components/StudentDashboard-hero.module.css
@@ -13,3 +13,19 @@
     border-radius: 30px;
     margin: 30px;
 }
+
+.hero_section_title{
+    background-color: red;
+    padding: -20px;
+}
+
+
+span{
+    margin: 0;
+    padding: 0;
+    color: blue;
+}
+
+*{
+box-sizing: border-box;
+}
