--- a/src/pages/studentDashboard-components/StudentDashboard-hero.module.css
+++ b/src/pages/studentDashboard-components/StudentDashboard-hero.module.css
@@ -16,15 +16,22 @@
 
 .hero_section_title{
     background-color: red;
-    padding: -20px;
+    display: inline-block;
+    margin:0;
+    
+}
+
+.hero_section_title > p{
+    color: white;
+    margin: -4.5px 0;
 }
 
 
-span{
+/* span{
     margin: 0;
     padding: 0;
     color: blue;
-}
+} */
 
 *{
 box-sizing: border-box;
