--- a/frontend/src/pages/teacherDashboard-components/TeacherDashboard-hero.module.css
+++ b/frontend/src/pages/teacherDashboard-components/TeacherDashboard-hero.module.css
@@ -9,6 +9,7 @@
 .studentDashboard_hero_displayArea{
     background-color: #FFFFFF80 ;
     /* background-color: #6b6a7280 ; */
+    /* background-color: #2d3a3e; */
     height: 90%;
     width: 100%;
     border-radius: 30px;
