--- a/frontend/src/components/DashboardNavBar.module.css
+++ b/frontend/src/components/DashboardNavBar.module.css
@@ -77,13 +77,13 @@
     border-radius: 50%;
     margin-right: 8px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-    /* border: 2px solid red; */
+
 }
 
 .dotSelected{
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
     height: 30px;
     width: 30px;
     border-radius: 50%;
@@ -91,7 +91,8 @@
     background-color: #FDF7C0;
     border: 2.5px solid var(--darker-blue);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-    /* border: 2px solid red; */
+    position: relative;
+   
 }
 
 .dot p{
@@ -101,10 +102,16 @@
 .dot_text{
     font-family: Nunito, sans-serif;
     font-weight: 900;
-    font-size: 18px ;
+    /* font-size: 18px ; */
+    font-size: 16px ;
     color: var(--headings-font-color);
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    position: absolute;
 }
+
+
+
+
 
 /* .dashboard_progressTracker{
     height: 40px;
