--- a/frontend/src/pages/home-components/Slides/Slides.css
+++ b/frontend/src/pages/home-components/Slides/Slides.css
@@ -18,19 +18,17 @@
 .home-slides-text {
   height: 6%;
 }
-.home-slides-point-title {
-  font-size: 16px;
-  margin-left: 3%;
+.home-star {
+  width: 50px;
+  height: 50px;
+
   background-image: url("../../../assets/Home/star.png");
   background-repeat: no-repeat;
-  background-position: 0 .4em;
-  padding-left: 3em;
+  background-position: 0 0.4em;
 }
 .home-slides-point {
   padding-bottom: 0.01%;
   text-align: justify;
-  margin-left: 50px;
-  padding-left: 2em;
 }
 
 .home-slides-star {
@@ -40,3 +38,10 @@
   /* list-style-image: url("../../../assets/Home/star.png"); */
 }
 
+.home-slides-star li {
+  padding-left: 40px;
+}
+
+.home-star-item p {
+  font-weight: normal;
+}
