--- a/frontend/src/components/DashboardNavBar.module.css
+++ b/frontend/src/components/DashboardNavBar.module.css
@@ -34,7 +34,7 @@
 }
 
 .dashboard_progressTracker_container_hidden{
-    opacity: 0.3;
+    opacity: 0;
 }
 
 
@@ -124,7 +124,7 @@
     display: flex;
     align-items: center;
     align-self: flex-end;
-    margin-bottom: 6px;
+    margin-bottom: 10px;
     gap: 27px;
     
 
@@ -146,6 +146,7 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3),
     2px 2px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: opacity .5s;
 }
 
 .navBarBtns:hover{
