--- a/frontend/src/pages/teacherDashboard-components/TeacherDashboard_ProgressTracker.module.css
+++ b/frontend/src/pages/teacherDashboard-components/TeacherDashboard_ProgressTracker.module.css
@@ -103,6 +103,7 @@
     border-radius: 15px;
     margin-top: 15px;
     margin-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     
 }
 
