--- a/frontend/src/pages/teacherDashboard-components/TeacherDashboardModal.module.css
+++ b/frontend/src/pages/teacherDashboard-components/TeacherDashboardModal.module.css
@@ -1,7 +1,6 @@
 .modalBackground {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(200, 200, 200);
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top:0;
@@ -9,6 +8,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: fadein 1s;
+  }
+
+  @keyframes fadein{
+    from{
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
   
   .modalContainer {
@@ -24,6 +33,5 @@
   }
   
 
+
   
-  
- 
