--- a/frontend/src/components/DashboardSidebar.module.css
+++ b/frontend/src/components/DashboardSidebar.module.css
@@ -1,13 +1,11 @@
 
 /* -------------SIDEBAR OUTER CONTAINER----------------------- */
 .sidebar_container{
-    height: 100vh;
     height: 100%;
     min-width: 280px;
     width: 30px;
     background-color: var(--darker-blue);
     color: var(--white);
-    /* padding:20px 0; */
     position: relative;
 }
 
@@ -20,34 +18,31 @@
 
 /* ------------------STUDENT PROFILE PHOTO---------------------------- */
 .studentPhoto_container{
-    height: 15%;
-    margin: 10px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 15%;
+    margin: 10px 0;
     /* border: 2px solid red; */
 }
 
 .studentPhoto{
     height: 80%;
-
 }
 
 .sidebar_container.collapsed .studentPhoto{
     height: 65%;
-    padding: 0;
 }
 
-/* ------------------SIDEBAR BUTTONS---------------------------- */
+/* ------------------------SIDEBAR BUTTONS---------------------------- */
 .sidebar_button{
     display: flex;
     justify-content: flex-start;
-    gap: 15px;
     align-items: center;
-    font-weight: bolder;
+    gap: 15px;
     padding:12px 0;
     padding-left:20px;
-    /* height: 100%; */
+    font-weight: bolder;
     cursor: pointer;    
 }
 
@@ -58,7 +53,8 @@
 
 .sidebar_button_clicked{
     background-color: var(--lighter-blue);
-    color: grey;
+    color: var(--main-font-color);
+    /* color: grey; */
 }
 
 .sidebar_button_image{
@@ -79,47 +75,46 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 5%;
-    
     /* border: 2px solid magenta; */
 }
 
 .sidebar_container.collapsed .sidebar_arrow_container{
-    /* rotate: 180deg; */
-    justify-content: flex-start;
-    
+    justify-content: flex-start; 
+   
 }
 
 .sidebar_arrow{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--lighter-blue);
     width: 4.5rem;
     height: 4.2rem;
-    border-radius: 10px 0 0 10px;
     margin-top: 15px;
+    border-radius: 10px 0 0 10px;
+    background-color: var(--lighter-blue);
     cursor: pointer;
 }
 
 .sidebar_container.collapsed .sidebar_arrow{
-transform: rotate(180deg);
+    transform: rotate(180deg);
 }
 
 /* ------------------SIDEBAR SETTINGS ICONS---------------------------- */
 
 .sidebar_settings_icons_container{
-display: flex;
-justify-content: space-around;
-align-items: center;
-width: 100%;
-margin-bottom: 10%;
-padding: 0 21px;
-position: absolute;
-bottom: 0;
-font-family: 'Open sans', sans-serif;
-font-size: 14px;
-font-weight: bolder;
-/* border: 2px solid red; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10%;
+    padding: 0 21px;
+    font-family: 'Open sans', sans-serif;
+    font-size: 14px;
+    font-weight: bolder;
+
+    bottom: 0;
+    position: absolute;
+    /* border: 2px solid red; */
 }
 
 .sidebar_container.collapsed .sidebar_settings_icons_container{
@@ -127,16 +122,14 @@ font-weight: bolder;
     gap: 10px;
     margin-bottom: 35%;
     scale: 1.2;
-
 }
 
 .sidebar_settings_icons{
-display: flex;
-flex-direction: column;
-cursor: pointer;
-text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    text-decoration: none;
 }
-
 
 .sidebar_settings_icons img{
     height: 15px;
@@ -152,11 +145,4 @@ text-decoration: none;
 .sidebar_link{
     text-decoration: none;
     color: var(--white)
-}
-
-
-
-/* THIS CAN BE REMOVED WHEN JERVIN MERGES HIS CHANGES */
-.sidebar_container p{
-    margin: 0;
 }
