--- a/frontend/src/pages/studentDashboard-components/StudentDashboardSubmitProject.module.css
+++ b/frontend/src/pages/studentDashboard-components/StudentDashboardSubmitProject.module.css
@@ -1,13 +1,12 @@
 .outer_container{
-    /* background-color: yellow; */
-    height: 100%;
-    width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
-.left{
+.panel{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,7 +28,6 @@
     font-size: 24px;
     font-weight: 700;
     color: var(--main-font-color);
-
 }
 
 .text_paragraph{
@@ -48,14 +46,22 @@
     height: 20%;
     width: 45%;
     max-width: 240px;
-    background-color: rgb(240, 0, 168) ;
-    background-color: #F91C85;
     border-radius: 20px;
-    position: absolute;
-    bottom: 7%;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 12px;
     cursor: pointer;
+    background-color: #F91C85;
+    /* background-color: rgb(240, 0, 168) ; */
     
+    position: absolute;
+    bottom: 7%;
+}
+
+.button:hover{
+    opacity: 0.7;
+}
+
+.button:active{
+    opacity: 1;
 }
 
 .image_small{
@@ -70,13 +76,10 @@
     color: var(--white);
 }
 
-.vertical{
+.vertical_line{
     height: 90%;
-    border-left: 2px solid var(--lighter-blue);
     border-radius: 20px;
+    border-left: 2px solid var(--lighter-blue);
+    
 }
 
-.right{
-    width: 49%;
-    border: 2px solid red;
-}
