--- a/frontend/src/pages/teacherDashboard-components/TeacherDashboardStudentProfiles.module.css
+++ b/frontend/src/pages/teacherDashboard-components/TeacherDashboardStudentProfiles.module.css
@@ -1,22 +1,22 @@
 .outermost_container{
-    height: 100%;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    height: 100%;
+    width: 100%;
     /* border: 2px solid red; */
 }
 
+/***********CARD***********/
 .card_container{
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
     height: 89%;
     width: 90%;
-    display: flex;
-    /* justify-content: center; */
-    flex-wrap: wrap;
     padding: 0 80px;
-    /* border: 2px solid blue; */
     overflow-y: scroll;
+     /* border: 2px solid blue; */
 }
 
 .card{
@@ -25,12 +25,12 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-right: 60px;
-    margin-bottom: 40px;
-    background-color: var(--white);
     height: 205px;
     width: 200px;
+    margin-right: 60px;
+    margin-bottom: 40px;
     border-radius: 15px;
+    background-color: var(--white);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     cursor: pointer;
 }
@@ -46,29 +46,21 @@
     color: var(--main-font-color);
 }
 
-.card_container::-webkit-scrollbar {
-    width: 1.2em;
-   
-    border-radius: 20px;
-    margin-right: -100px;
 
-    /* background-color: var(--white); */
-    
+/***********SCROLLBAR***********/
+.card_container::-webkit-scrollbar {
+    width: 1.2em;  
   }
    
 .card_container::-webkit-scrollbar-track {
-    background-color: var(--white);
     border-radius: 20px;
-    margin-right: -100px;
-    
+    background-color: var(--white); 
   }
    
   .card_container::-webkit-scrollbar-thumb {
-    background-color: var(--darker-blue);
     width: 0.8em;
-    /* outline: 1px solid var(--white); */
     border-radius: 50px;
-
     border: 2px solid transparent;
+    background-color: var(--darker-blue);
     background-clip: content-box;
 }
