--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -23,7 +23,7 @@
 
 .button {
   font-weight: bold;
-
+  cursor: pointer;
   background: none;
   background-color: white;
   border: 2px solid rgb(75, 193, 244);
@@ -43,6 +43,7 @@
 
 .home-big-button {
   width: 25%;
+  cursor: pointer;
 }
 
 .button-accent {
