--- a/frontend/src/pages/home-components/HomeModal.css
+++ b/frontend/src/pages/home-components/HomeModal.css
@@ -23,8 +23,8 @@
 .home-modal-box {
   position: relative;
   z-index: 1;
-  height: 80%;
-  width: 60%;
+  height: 90%;
+  width: 50%;
   background-color: white;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
@@ -40,4 +40,30 @@
 .home-modal-teacher {
   width: 33%;
   margin: 10px;
+}
+
+.input {
+  border-radius: 5px;
+  margin-top: 30px;
+  border: solid rgb(183, 181, 181);
+  border-width: 1px;
+}
+
+.button-margin {
+  margin-top: 40px;
+}
+
+.home-modal-close-button {
+  cursor: pointer;
+  width: 30px;
+  height: 40px;
+  padding-left: 95%;
+}
+
+.home-modal-title{
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
